@@ -38,7 +38,7 @@
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
 <!DOCTYPE dialog SYSTEM "chrome://firegpg/locale/showtext.dtd">
 <dialog title="&title;" orient="vertical" autostretch="always" 
-        onload="sizeToContent(); onLoad(this);" buttons="cancel"
+        onload="sizeToContent(); onLoad(this);" buttons="accept"
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <script src="showtext.js"/>
   <description control="text" id="description" value="&description;"/>
