@@ -2,6 +2,7 @@
 	* Fix an error in getPrivateKeyPassword()
 	* Cgpg class in now finish !
 	* Implementation of getSelfKey(), for get the default key !
+	* Full implementation for saving the password, with a menu for erase it.
 
 2007-03-05  Achraf cherti
 	* new function getPrivateKeyPassword() (with i18n support), to replace
